--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./static/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./static/css/all.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./static/css/style.css" />
     <title>HashCon</title>
   </head>
@@ -50,7 +55,7 @@
     <div class="hero__bg">
       <img src="./static/img/heroBg.svg" alt="" />
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid pb-5">
       <div class="row pl-5">
         <div class="col-md-6 pt-5 pl-5 my-auto">
           <h1 class="text__primary">
@@ -75,6 +80,209 @@
       </div>
     </div>
     <!-- HERO SECTION END -->
+    <!-- IDEA SECTION -->
+    <div class="container-fluid">
+      <div class="row px-5">
+        <div class="col-md-6 pl-5 pt-5">
+          <h1 class="font-weight-lighter pt-5">Light, Fast & Powerful</h1>
+          <span class="d-block text__secondary pt-4">
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+            commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+            penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+            Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
+            Nulla consequat massa quis enim.
+          </span>
+          <div class="py-5">
+            <div class="row pt-4">
+              <div class="col-6 my-auto">
+                <img src="./static/img/ideaImg.svg" class="w-25" alt="" />
+                <span class="d-block h3 pt-3"> Title Goes Here </span>
+                <span class="d-block">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                  Aenean commodo ligula eget dolor.
+                </span>
+              </div>
+              <div class="col-6">
+                <img src="./static/img/ideaImg.svg" class="w-25" alt="" />
+                <span class="d-block h3 pt-3"> Title Goes Here </span>
+                <span class="d-block">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                  Aenean commodo ligula eget dolor.
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img
+            src="./static/img/ideaImg2.svg"
+            class="img-fluid"
+            alt=""
+            srcset=""
+          />
+        </div>
+      </div>
+    </div>
+    <!-- IDEA SECTION END -->
+    <!-- FEATURE SECTION -->
+    <div class="container-fluid px-5 py-5">
+      <div class="row pt-5 px-5">
+        <div class="col-md-4">
+          <img src="./static/img/customer.svg" class="img-fluid" alt="" />
+        </div>
+        <div class="col-md-6 pl-5">
+          <h1 class="font-weight-lighter">Light, Fast & Powerful</h1>
+          <span class="d-block text__secondary pt-4">
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+            commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+            penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+            Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
+            Nulla consequat massa quis enim.
+          </span>
+          <div class="py-5">
+            <div class="row pt-4">
+              <div class="col-6 my-auto">
+                <img src="./static/img/ideaImg.svg" class="w-25" alt="" />
+                <span class="d-block h3 pt-3"> Title Goes Here </span>
+                <span class="d-block">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                  Aenean commodo ligula eget dolor.
+                </span>
+              </div>
+              <div class="col-6">
+                <img src="./static/img/ideaImg.svg" class="w-25" alt="" />
+                <span class="d-block h3 pt-3"> Title Goes Here </span>
+                <span class="d-block">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                  Aenean commodo ligula eget dolor.
+                </span>
+              </div>
+            </div>
+            <div class="row pt-4">
+              <div class="col-6 my-auto">
+                <img src="./static/img/ideaImg.svg" class="w-25" alt="" />
+                <span class="d-block h3 pt-3"> Title Goes Here </span>
+                <span class="d-block">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                  Aenean commodo ligula eget dolor.
+                </span>
+              </div>
+              <div class="col-6">
+                <img src="./static/img/ideaImg.svg" class="w-25" alt="" />
+                <span class="d-block h3 pt-3"> Title Goes Here </span>
+                <span class="d-block">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                  Aenean commodo ligula eget dolor.
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- FEATURE SECTION END -->
+    <!-- MOBILE SECTION -->
+    <div class="container-fluid pt-5 px-5">
+      <div class="row pt-5 px-5">
+        <div class="col-md-6 pl-5">
+          <h1 class="font-weight-lighter">Light, Fast & Powerful</h1>
+          <span class="d-block text__secondary pt-4">
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+            commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+            penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+            Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
+            Nulla consequat massa quis enim.
+          </span>
+          <div class="py-5">
+            <div class="row pt-4">
+              <div class="col-6 my-auto">
+                <img src="./static/img/ideaImg.svg" class="w-25" alt="" />
+                <span class="d-block h3 pt-3"> Title Goes Here </span>
+                <span class="d-block">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                  Aenean commodo ligula eget dolor.
+                </span>
+              </div>
+              <div class="col-6">
+                <img src="./static/img/ideaImg.svg" class="w-25" alt="" />
+                <span class="d-block h3 pt-3"> Title Goes Here </span>
+                <span class="d-block">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                  Aenean commodo ligula eget dolor.
+                </span>
+              </div>
+            </div>
+            <div class="row pt-4">
+              <div class="col-6 my-auto">
+                <img src="./static/img/ideaImg.svg" class="w-25" alt="" />
+                <span class="d-block h3 pt-3"> Title Goes Here </span>
+                <span class="d-block">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                  Aenean commodo ligula eget dolor.
+                </span>
+              </div>
+              <div class="col-6">
+                <img src="./static/img/ideaImg.svg" class="w-25" alt="" />
+                <span class="d-block h3 pt-3"> Title Goes Here </span>
+                <span class="d-block">
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                  Aenean commodo ligula eget dolor.
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <img src="./static/img/Vert.jpg" class="img-fluid" alt="" />
+        </div>
+      </div>
+    </div>
+    <!-- MOBILE SECTION END -->
+    <!-- FOOTER -->
+    <div id="footer" class="container-fluid py-5 px-5">
+      <div class="row px-5 align-items-center">
+        <div class="col-4">
+          <span class="d-block text-secondary">&copy; 2021 By.tech</span>
+        </div>
+        <div class="col-4 text-center">
+          <span class="d-block h4 text__primary">By.tech</span>
+        </div>
+        <div class="col-4 text-right">
+          <div class="d-inline-block">
+            <a href="#" class="btn__primary py-2 px-4">Purchase Now</a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <hr />
+        </div>
+        <div class="col-md-6">
+          <div class="d-flex">
+            <a href="#" class="nav-link text__primary">Home</a>
+            <a href="#" class="nav-link text__primary">About</a>
+            <a href="#" class="nav-link text__primary">Contact </a>
+          </div>
+        </div>
+        <div class="col-md-6 pr-5">
+          <div id="social" class="d-flex float-right">
+            <a href="#" class="text-secondary">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#" class="text-secondary">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#" class="text-secondary">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="#" class="text-secondary">
+              <i class="fab fa-github-alt"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- FOOTER END -->
     <script src="./static/js/jquery-3.3.1.min.js"></script>
     <script src="./static/js/bootstrap.bundle.min.js"></script>
     <script src="./static/js/app.js"></script>
